2006-05-30 CTAF <>
	* emacs : remove some bug in prog.emacs, mode.emacs and misc.emacs

2006-05-29 CTAF <>
	* emacs : M-x => browse-kill-ring
	* emacs : use generic, generic-x for unix configuration file
	* emacs : support flymake in makefile template

2006-05-21 CTAF <> -- 0.3.1
	* xsession : remove wm changing, not complete enought
	* emacs : icicle => M-x, C-x f, ...
	* emacs : include gdb-ui for a better debugging experience
	* emacs : pc-keys: better home and end keybindings

2006-05-20 CTAF <>
	* xsession : support kdeinit
	* xsession : stability improvement
	* emacs : indicate buffer boundary on the left fringe
	* shell : disable annoying bell
	* shelltools.sh : null_cmd (redirect output to /dev/null)

2006-05-18 CTAF <>
	* generic-menu.el : allow for menu buffer
	* generic-dl.el : menu buffer, with all function name of the current buffer
	* emacs : new menu with all function and configuration

2006-05-16 CTAF <>
	* xsession : allow stopping the current wm normaly
	* xsession : shutdown gnome in a clean way
	* ct-switch-wm : allow to change the current wm on the fly
	* emacs : remove show trailing white space
	* ct-switch-wm : you cant specifie the wm in argument

2006-05-14 CTAF <>
	* xsession : experimental random xsession
	* xsession : experimental change wm on the fly
	* emacs : when saving, make file executable if it should be

2006-05-12 CTAF <>
	* emacs : gdb enhancement
	* emacs : save cursor position in files
	* emacs : rebind some bindings (F7)
	* emacs : enable folding (f10)
	* emacs : add color-theme
	* emacs : add setnu-mode (line number on the left fringe)
	* emacs : autofill comment with " *" when in /* */
	* emacs : better help

2006-05-11 CTAF <>
	* color.emacs : new file for emacs color theme
	* emacs : remove hightlight change => text tend to be unreadeable

2006-05-09 CTAF <>
	* ct-date : bug with $((08)), now use denormanumber
	* emacs : hightlight current line
	* emacs : show buffer name in the window title