@@ -5,7 +5,7 @@
 ## Login   <ctaf@epita.fr>
 ##
 ## Started on  Fri Sep 30 22:17:52 2005 GESTES Cedric
-## Last update Mon Apr 24 02:04:36 2006 GESTES Cedric
+## Last update Sun Feb  4 14:29:21 2007 GESTES Cedric
 ##
 ##CTAFCONF
 
@@ -28,13 +28,14 @@ alias_set - 'pushd -1'
 #############################
 alias_set c './configure'
 alias_set a './autogen.sh'
-alias_set m 'make'
-alias_set md 'make distclean'
-alias_set ma 'make clean all'
-alias_set mac 'make clean all check'
+alias_set m '~/.ctafconf/bin/colormake'
+alias_set md '~/.ctafconf/bin/colormake distclean'
+alias_set ma '~/.ctafconf/bin/colormake clean all'
+alias_set mac '~/.ctafconf/bin/colormake clean all check'
 alias_set gm 'gmake'
-alias_set mm 'make |& less'
-alias_set make_muet "make 1>/dev/null"
+alias_set cm 'colormake'
+alias_set mm '~/.ctafconf/bin/colormake |& less'
+alias_set make_mute "~/.ctafconf/bin/colormake 1>/dev/null"
 alias_set fixme 'grep -n -a -s FIXME * 2> /dev/null'
 alias_set todo 'grep -n -a -s TODO * 2> /dev/null'
 #alias_set make 'gmake'
