@@ -1,3 +1,6 @@
+2007-02-04 CTAF <>
+	* shell : include colormake, binding for m,ma,etc.. use it :-)
+
 2006-05-30 CTAF <>
 	* emacs : remove some bug in prog.emacs, mode.emacs and misc.emacs
 
